--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -19,9 +19,10 @@
             </section>
             <ul>
                 <li><a href="Index.html">Inicio</a></li>
+                <li><a href="Inscritos.html">Inscritos</a></li>
                 <li><a href="Sobre_Nosotros.html">Sobre Nosotros</a></li>
                 <li><a href="Productos.html">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
               </ul>
         </nav>
     </header>
