Se crea el controlador

--- a/Contacto.html
+++ b/Contacto.html
@@ -18,7 +18,7 @@
                 <img src="./img/RF_1.png" class="logo1" alt="">
             </section>
             <ul>
-                <li><a href="Inicio.html">Inicio</a></li>
+                <li><a href="Index.html">Inicio</a></li>
                 <li><a href="Inscritos.html">Inscritos</a></li>
                 <li><a href="Sobre_Nosotros.html">Sobre Nosotros</a></li>
                 <li><a href="Productos.html">Productos</a></li>
