--- a/Index.html
+++ b/Index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="contenedor-modal">
                         <section class="modal">
-                            <h2>Formulario de Postulación</h2>
+                            <h2 id="t">Formulario de Postulación</h2>
                             <form class="text">
                              <section class="datos1">
                                 <section class="nombre">
@@ -168,9 +168,9 @@
                         <img src="./img/of.png" class="csa" alt="oferta">
                     </section>
                     <section class="descripcion">
-                        <h3>OFERTA2</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil vero rerum obcaecati voluptas perspiciatis deleniti, nam ut tenetur id consequatur recusandae animi reiciendis corrupti, alias saepe. Deserunt accusamus perferendis eos!</p>
-                        <button class="btn" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
+                        <h3>OFERTA</h3>
+                        <p>Oferta No Disponible!</p>
+                        <button class="btn1" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
                     </section>
                 </section>
                 <section class="oferta3">
@@ -178,9 +178,9 @@
                         <img src="./img/of2.png" class="csa" alt="oferta">
                     </section>
                     <section class="descripcion">
-                        <h3>OFERTA3</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil vero rerum obcaecati voluptas perspiciatis deleniti, nam ut tenetur id consequatur recusandae animi reiciendis corrupti, alias saepe. Deserunt accusamus perferendis eos!</p>
-                        <button class="btn" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
+                        <h3>OFERTA</h3>
+                        <p>Oferta No Disponible!</p>
+                        <button class="btn1" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
                     </section>
                 </section>
                 <section class="oferta4">
@@ -188,9 +188,9 @@
                         <img src="./img/of3.png" class="csa" alt="oferta">
                     </section>
                     <section class="descripcion">
-                        <h3>OFERTA4</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil vero rerum obcaecati voluptas perspiciatis deleniti, nam ut tenetur id consequatur recusandae animi reiciendis corrupti, alias saepe. Deserunt accusamus perferendis eos!</p>
-                        <button class="btn" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
+                        <h3>OFERTA</h3>
+                        <p>Oferta No Disponible!</p>
+                        <button class="btn1" type="submit" id="lanzar-modal" onclick="openModal()">POSTULARME</button>
                     </section>
                 </section>
             </section>
@@ -213,8 +213,8 @@
           <li><a href="">Gissela Ruiz</a></li>
           <li><a href="">Julieth Alvarez</a></li>
           <li><a href="">Manuela Arenas</a></li>
-          <li><a href="">Vanesssa Tellez</a></li>
-          <li><a href="">Yesica Guzman</a></li>
+          <li><a href="">Vanessa Tellez</a></li>
+          <li><a href="">Yessica Guzman</a></li>
         </ul>
       </section>
       <section class="footerbottom">
