--- a/Inscritos.html
+++ b/Inscritos.html
@@ -14,7 +14,7 @@
 <body>
     
     <header>
-        <nav>
+        <nav id="">
             <section class="logo">
                 <img src="./img/RF_1.png" class="logo1" alt="">
             </section>
@@ -30,9 +30,9 @@
 
     <main>
 
-        <section class="container" id="container">
-
-        </section>
+        <div class="container" id="contiene">
+          
+        </div>
 
     </main>
 
@@ -52,8 +52,8 @@
                 <li><a href="">Gissela Ruiz</a></li>
                 <li><a href="">Julieth Alvarez</a></li>
                 <li><a href="">Manuela Arenas</a></li>
-                <li><a href="">Vanesssa Tellez</a></li>
-                <li><a href="">Yesica Guzman</a></li>
+                <li><a href="">Vanessa Tellez</a></li>
+                <li><a href="">Yessica Guzman</a></li>
               </ul>
             </section>
             <section class="footerbottom">
