--- a/Productos.html
+++ b/Productos.html
@@ -13,17 +13,20 @@
 <body>
     
     <header>
+     
         <nav>
             <section class="logo">
                 <img src="./img/RF_1.png" class="logo1" alt="">
             </section>
-            <ul>
+            <ul id="menu-hamburguesa">
                 <li><a href="Index.html">Inicio</a></li>
                 <li><a href="Inscritos.html">Inscritos</a></li>
                 <li><a href="Sobre_Nosotros.html">Sobre Nosotros</a></li>
                 <li><a href="Productos.html">Productos</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
               </ul>
+              <button id="boton-hamburguesa"><span>&#9776;</span>Menú</button>
+          <!--  -->
         </nav>
     </header>
 
@@ -125,8 +128,8 @@
                 <li><a href="">Gissela Ruiz</a></li>
                 <li><a href="">Julieth Alvarez</a></li>
                 <li><a href="">Manuela Arenas</a></li>
-                <li><a href="">Vanesssa Tellez</a></li>
-                <li><a href="">Yesica Guzman</a></li>
+                <li><a href="">Vanessa Tellez</a></li>
+                <li><a href="">Yessica Guzman</a></li>
               </ul>
             </section>
             <section class="footerbottom">
@@ -134,6 +137,8 @@
             </section>
           </section>
     </footer>
+
+    <script src="./js/menu.js"></script>
 
 </body>
 </html>
