--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -163,8 +163,8 @@
                 <li><a href="">Gissela Ruiz</a></li>
                 <li><a href="">Julieth Alvarez</a></li>
                 <li><a href="">Manuela Arenas</a></li>
-                <li><a href="">Vanesssa Tellez</a></li>
-                <li><a href="">Yesica Guzman</a></li>
+                <li><a href="">Vanessa Tellez</a></li>
+                <li><a href="">Yessica Guzman</a></li>
               </ul>
             </section>
             <section class="footerbottom">
